<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">اى خدمة</string>
    <string name="et_mobile" tools:ignore="ExtraTranslation">موبايل</string>
    <string name="mobile_hint">موبيل</string>
    <string name="password_hint">كلمة المرور</string>
    <string name="forget_password">نسيت كلمة المرور</string>
    <string name="remeber_me">تذكرني</string>
    <string name="login_text">دخول</string>
    <string name="new_account_text">حساب جديد</string>
    <string name="login_first_text">تسجيل دخول</string>
    <string name="register_your_account">حساب جديد</string>
    <string name="name">الاسم</string>
    <string name="email">الاميل</string>
    <string name="address">العنوان</string>
    <string name="define_your_place">حدد موقعك</string>
    <string name="verification_hint">- - - - - -</string>
    <string name="register_data">تسجيل بياناتي</string>
    <string name="place_name">اسم المنشأة</string>
    <string name="phone_1">التليفون 1</string>
    <string name="phone_2">التليفون 2</string>
    <string name="place_info">معلومات عن المكان</string>
    <string name="add_place">اضافة منشاة</string>
    <string-array name="city">
        <item>شروق</item>
        <item>مدينتي</item>
        <item>رحاب</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="search_button">ابحث</string>
    <string name="mobile_number_login">ادخل رقم الهاتف المحمول</string>
    <string name="pick_image_intent_text">pick image</string>
    <string name="profile_pic">صورة البروفيل</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
