<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/login_first_text"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginBottom="@dimen/image_view_margin_bottom"
        android:layout_weight="3"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/tv_mobile"
        android:autofillHints="mobileNo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal "
        android:gravity="center"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:inputType="phone"
        android:imeOptions="actionSend"
        android:layout_weight="1"
        android:hint="@string/mobile_number_login" />


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="right|center"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_weight="1"
        android:layoutDirection="rtl"
        android:text="@string/remeber_me"
        android:textSize="15sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginBottom="@dimen/margin_bottom_login_button"
        android:layout_weight="1"
        android:background="@drawable/buttonbordershadow"
        android:text="@string/login_text"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_weight="1"
        android:background="@drawable/buttonbordershadow"
        android:text="@string/register_data"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>
