<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.PlaceActivity"
    android:layoutDirection="rtl">

    <include layout="@layout/app_toolbar"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/place_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/place_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_name"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_address">

            <EditText
                android:id="@+id/place_phone1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:hint="@string/phone_1" />

            <EditText
                android:id="@+id/place_phone2"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/phone_2" />
        </LinearLayout>
        <EditText
            android:id="@+id/place_desc"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/place_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:background="@color/colorPrimary"
            android:text="@string/add_place"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>


</LinearLayout>