<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/login_first_text"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginBottom="@dimen/image_view_margin_bottom"
        android:layout_weight="3"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_weight="1"
        android:hint="@string/mobile_hint" />



    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="right|center"
        android:layout_weight="1"
        android:layoutDirection="rtl"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:text="@string/remeber_me"
        android:textSize="15sp"
        android:textStyle="bold" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginBottom="@dimen/margin_bottom_login_button"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/login_text"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:textStyle="bold" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text=" تسجيل بياناتي"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>